k8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: football-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: football-webapp
  template:
    metadata:
      labels:
        app: football-webapp
    spec:
      containers:
        - name: webapp
          image: football-webapp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: football-webapp
spec:
  selector:
    app: football-webapp
  ports:
    - port: 80
      targetPort: 5000
