k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: football-ingress
spec:
  rules:
    - host: football.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: football-webapp
                port:
                  number: 80
